# translate-bot

./: .env  Cargo.toml  LICENSE  README.md
src/: lib.rs  logging.rs  main.rs
