[package]
name = "translate-bot"
version = "0.1.0"
edition = "2021"
authors = ["Alex Black <wa7@sa34.cx>"]
license = "MIT"
keywords = ["telegram", "translate"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "translate_bot"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
reqwest = { version = "0.11", features = ["json"] }
