[package]
name = "translate-bot"
version = "0.1.0"
edition = "2021"
authors = ["Alex Black <wa7@sa34.cx>"]
license = "MIT"
keywords = ["telegram", "translate"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "translate_bot"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
reqwest = { version = "0.11", features = ["json"] }

serde = "1.0"
serde_derive = "1.0"

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

log = "0.4"
simplelog = "0.12"